--- a/Arkanoid.vcxproj
+++ b/Arkanoid.vcxproj
@@ -76,7 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Programs\SFML-2.5.1\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Programs\SFML-2.5.1\include; C:\Users\%USERNAME%\source\repos\Arkanoid\Source</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>SFML_STATIC;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -122,7 +122,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Source\Main.cpp" />
+    <ClCompile Include="Source\Systems\ArkanoidGame.cpp" />
+    <ClCompile Include="Source\Systems\ArkanoidGraphics.cpp" />
+    <ClCompile Include="Source\Systems\ArkanoidInput.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\Structures\BasicStructures.h" />
+    <ClInclude Include="Source\Systems\ArkanoidGame.h" />
+    <ClInclude Include="Source\Systems\ArkanoidGraphics.h" />
+    <ClInclude Include="Source\Systems\ArkanoidInput.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
