--- a/Arkanoid.vcxproj.filters
+++ b/Arkanoid.vcxproj.filters
@@ -1,14 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Исходные файлы">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="Source">
+      <UniqueIdentifier>{1bc5a047-35b6-4694-b75d-30b1770eb45b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Systems">
+      <UniqueIdentifier>{99b20a20-a360-45aa-a303-bf47c6e248fe}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Structures">
+      <UniqueIdentifier>{0dd2a41c-382d-444c-ad6c-545079a27c39}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
-      <Filter>Исходные файлы</Filter>
+    <ClCompile Include="Source\Systems\ArkanoidGame.cpp">
+      <Filter>Source\Systems</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Systems\ArkanoidGraphics.cpp">
+      <Filter>Source\Systems</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Systems\ArkanoidInput.cpp">
+      <Filter>Source\Systems</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Main.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\Systems\ArkanoidGame.h">
+      <Filter>Source\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Systems\ArkanoidGraphics.h">
+      <Filter>Source\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Systems\ArkanoidInput.h">
+      <Filter>Source\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Structures\BasicStructures.h">
+      <Filter>Source\Structures</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
