Added basic widgets, objects and headers
+Added simple physics;
+Added game states;
+Basic systems working much better

--- a/Arkanoid.vcxproj
+++ b/Arkanoid.vcxproj
@@ -122,16 +122,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\GUI\Widgets\PlayingWidget.cpp" />
+    <ClCompile Include="Source\GUI\Widgets\Widget.cpp" />
     <ClCompile Include="Source\Main.cpp" />
+    <ClCompile Include="Source\Objects\Ball.cpp" />
+    <ClCompile Include="Source\Objects\Brick.cpp" />
     <ClCompile Include="Source\Systems\ArkanoidGame.cpp" />
     <ClCompile Include="Source\Systems\ArkanoidGraphics.cpp" />
     <ClCompile Include="Source\Systems\ArkanoidInput.cpp" />
+    <ClCompile Include="Source\Systems\Components\PhysicsComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Structures\BasicStructures.h" />
+    <ClInclude Include="Source\GUI\Widgets\PlayingWidget.h" />
+    <ClInclude Include="Source\GUI\Widgets\Widget.h" />
+    <ClInclude Include="Source\Headers\BasicHeader.h" />
+    <ClInclude Include="Source\Headers\DebugHeader.h" />
+    <ClInclude Include="Source\Headers\GraphicsHeader.h" />
+    <ClInclude Include="Source\Objects\Ball.h" />
+    <ClInclude Include="Source\Objects\Brick.h" />
     <ClInclude Include="Source\Systems\ArkanoidGame.h" />
     <ClInclude Include="Source\Systems\ArkanoidGraphics.h" />
     <ClInclude Include="Source\Systems\ArkanoidInput.h" />
+    <ClInclude Include="Source\Systems\Components\PhysicsComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
