--- a/Arkanoid.vcxproj
+++ b/Arkanoid.vcxproj
@@ -122,6 +122,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\GUI\Bitmap.cpp" />
     <ClCompile Include="Source\GUI\Widgets\PlayingWidget.cpp" />
     <ClCompile Include="Source\GUI\Widgets\Widget.cpp" />
     <ClCompile Include="Source\Main.cpp" />
@@ -137,6 +138,7 @@
     <ClCompile Include="Source\Systems\Components\SpriteManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\GUI\Bitmap.h" />
     <ClInclude Include="Source\GUI\Widgets\PlayingWidget.h" />
     <ClInclude Include="Source\GUI\Widgets\Widget.h" />
     <ClInclude Include="Source\Headers\BasicHeader.h" />
