--- a/Arkanoid.vcxproj.filters
+++ b/Arkanoid.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Source\Objects\Object.cpp">
       <Filter>Source\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="Source\GUI\Bitmap.cpp">
+      <Filter>Source\GUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Systems\ArkanoidGame.h">
@@ -115,6 +118,9 @@
     </ClInclude>
     <ClInclude Include="Source\Objects\Instances\Upgrade.h">
       <Filter>Source\Objects\Instances</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GUI\Bitmap.h">
+      <Filter>Source\GUI</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
